all: uprava casti na odovzdanie BP1
Signed-off-by: Filip Lobpreis <f.lobpreis@gmail.com>

--- a/includes/conclusion.tex
+++ b/includes/conclusion.tex
@@ -1,1 +1,6 @@
-Conclusion is going to be where? \newline Here.
+V prvej časti bakalárskej prace bolo našou úlohou zoznámiť sa s robotom a neimplementovať ovládač na neho pomocou ROSu.
+V stave v akom sme ho dostali sme museli opraviť niektoré softvérové chyby na robote. Tie sa týkali hlavne komunikácie s robotom.
+V tejto práci sme sa dostali do stavu, kedy vieme robotu poslať, akou rýchlosťou sa majú hýbať jednotlive kolesa a on nám dáva spätnú väzbu,
+že akou rýchlosťou naozaj ide. To ale ešte nefunguje, tak ako má kvôli zašumenému signálu. V druhej časti bakalárskej prace by sme chceli opraviť
+alebo aspoň zredukovať toto zašumenie. Poprípade nájsť iný spôsob na kontrolovanie pozície robota v priestore.
+
