--- a/includes/glossary.tex
+++ b/includes/glossary.tex
@@ -1,5 +1,6 @@
-\newacronym{ROS}{ROS}{Robot Operating System}
+\newacronym{API}{API}{Application Programming Interface}
+\newacronym{DDS}{DDS}{Data Distribution Service}
 \newacronym{IPC}{IPC}{Inter Process Communication}
 \newacronym{LAN}{LAN}{Local Area Network}
-\newacronym{DDS}{DDS}{Data Distribution Service}
+\newacronym{ROS}{ROS}{Robot Operating System}
 
