--- a/includes/introduction.tex
+++ b/includes/introduction.tex
@@ -1,3 +1,4 @@
-Ukazka upraveneho templatu FEIStyle.cls (\url{https://github.com/Kyslik/FEIStyle}) s pouzitim Times New Roman fontu. Nastavenie fontov som prebral z oficialneho IEEE templatu, vlozil som ho do \texttt{FEIStyle.cls} na riadky 228-230. 
+Táto bakalárska práca popisuje ako naprogramovať ovládač pre mobilného robota pomocou druhej verzie Robotického Operačného Systému (ROS2).
+Ovládač obsahuje funkcie ROS2 napr. uzly, parametre, služby a témy. Hlavným cieľom tohto projektu je vytvoriť rozhranie tak, aby
+bolo možné ovládať robota pomocou jednoduchých príkazov cez ROS.
 
-Tu bude krasny uvod s diakritikou atd. \newline A mozno aj viac riadkovy uvod.
