--- a/main.tex
+++ b/main.tex
@@ -12,8 +12,8 @@
 \FEIauthor{Filip Lobpreis}
 \FEItitle{Vytvorenie Ovládača v prostredí ROS pre mobilného robota}
 \FEItitleEn{Implementation of ROS Driver for Mobile Robot}
-\FEIkeywords{kľúčové slovo1, kľúčové slovo2, kľúčové slovo3}
-\FEIkeywordsEn{ROS, BlackMetal}
+\FEIkeywords{ROS, BlackMetal, uzly, témy, služby, akcie}
+\FEIkeywordsEn{ROS, BlackMetal, nodes, topics, services, actions}
 \FEIregNr{FEI-100863-111124}
 \FEIsupervisor{Ing. Michal Dobiš}
 \FEIconsultant{Ing. Michal Dobiš}
@@ -44,8 +44,8 @@
 \FEIcontent
 \FEIlistOfFiguresAndTables
 \FEIlistOfGlossaries
-\FEIlistOfAlgorithms
-\FEIlistOfListings
+% \FEIlistOfAlgorithms
+% \FEIlistOfListings
 
 \mainmatter
 
@@ -60,10 +60,10 @@
 
 \backmatter
 
-\FEIlistOfAppendix
-\FEIappendix{Štruktúra elektronického nosiča\label{att:A}}{includes/attachmentA}
-\FEIappendix{Algoritmus\label{att:B}}{includes/attachmentB}
-\FEIappendix{Výpis sublime\label{att:C}}{includes/attachmentC}
+% \FEIlistOfAppendix
+% \FEIappendix{Štruktúra elektronického nosiča\label{att:A}}{includes/attachmentA}
+% \FEIappendix{Algoritmus\label{att:B}}{includes/attachmentB}
+% \FEIappendix{Výpis sublime\label{att:C}}{includes/attachmentC}
 
 \end{document}
 
