--- a/includes/abstractEN.tex
+++ b/includes/abstractEN.tex
@@ -1,1 +1,4 @@
-On the other hand, we denounce with righteous indignation and dislike men who are so beguiled and demoralized by the charms of pleasure of the moment, so blinded by desire, that they cannot foresee the pain and trouble that are bound to ensue; and equal blame belongs to those who fail in their duty through weakness of will, which is the same as saying through shrinking from toil and pain. These cases are perfectly simple and easy to distinguish. In a free hour, when our power of choice is untrammelled and when nothing prevents our being able to do what we like best, every pleasure is to be welcomed and every pain avoided. But in certain circumstances and owing to the claims of duty or the obligations of business it will frequently occur that pleasures have to be repudiated and annoyances accepted. The wise man therefore always holds in these matters to this principle of selection: he rejects pleasures to secure other greater pleasures, or else he endures pains to avoid worse pains.
+The mobile robot performs such movements as we give it. Therefore, for this method to be as effective as possible, it must be readable both
+for the robot and for the user. The major task is to create such an environment for controlling the robot, so that the code is efficient and simple.
+Thus, it will be readable by both humans and robots. We decided for ROS2. You can read more about why and how we made the individual parts in the next sections.
+
