cp: core: split to multiple lines
Signed-off-by: Filip Lobpreis <f.lobpreis@gmail.com>

--- a/includes/core.tex
+++ b/includes/core.tex
@@ -39,9 +39,9 @@ cez LAN (\acrlong{LAN}). Služby sa využívajú pri komunikácii medzi viacerý
 
 \label{s_action}
 \textbf {Akcie} (TCP/IP) sú najzložitejším spôsobom komunikácie. Tento spôsob bol pridaný do~ROS1 až neskôr. V~druhej verzii ROSu je tento
-typ komunikácie medzi troma základnými. Sú založené na~službách a prebiehaju asynchronne~\cite{ROS2book}. a~máju 3 stavy. Najprv pošle klient serveru, akú akciu má vykonať, server mu potvrdí,
-že túto požiadavku dostal. Server začne následne vykonávať danú akciu a~posielať klientovi priebežné správy o~priebehu vykonávania žiadanej úlohy.
-Keď server skončí pošle klientovi výsledok akcie a~klient mu obratom potvrdí obdržanie výsledku.
+typ komunikácie medzi troma základnými. Sú založené na~službách a prebiehaju asynchronne~\cite{ROS2book}. a~máju 3 stavy. Najprv pošle klient serveru,
+akú akciu má vykonať, server mu potvrdí, že túto požiadavku dostal. Server začne následne vykonávať danú akciu a~posielať klientovi priebežné správy
+o~priebehu vykonávania žiadanej úlohy. Keď server skončí pošle klientovi výsledok akcie a~klient mu obratom potvrdí obdržanie výsledku.
 
 \begin{figure}[h]
 	\centering
