bib: original diff from ros organization 2017
Signed-off-by: Filip Lobpreis <f.lobpreis@gmail.com>

--- a/includes/bibliography.bib
+++ b/includes/bibliography.bib
@@ -21,6 +21,12 @@
   urldate = {2022-12-23}
 }
 
+@online{ROS2design,
+  title = {{Changes between ROS 1 and ROS 2}},
+  url = {http://design.ros2.org/articles/changes.html},
+  urldate = {2023-1-8}
+}
+
 @manual{timovyProjekt,
   author = {{Bc. Marek Pacalaj, Bc. Tomáš Kútik, Bc. Dominik Gula, Bc. Dávid Pavlič, Bc. Daniel Ďurkovič}},
   title = {Mobilný podstavec pre robota},
